<resources>
    <string name="app_name">Session Share</string>
    <string name="action_settings">Settings</string>
    <string name="device_name">Enter a device name..</string>
    <string name="enter">Enter</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Unknown Fenix Device</string>

    <!-- General strings -->
    <string name="send">Send</string>
    <string name="firefox_test_pilot">Firefox Test Pilot</string>
    <string name="web_experiment">web experiment</string>
    <string name="share_qr_code">Scan other device</string>
    <string name="no_find_your_device">Can\'t find your device?</string>
    <string name="no_find_your_device_subtitle">Share a QR code instead!</string>
    <string name="show_code">Show QR code</string>
    <string name="title_activity_qr_code">QrCodeActivity</string>
</resources>
