<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.MainActivity"
        tools:showIn="@layout/activity_main">

    <android.support.v7.widget.RecyclerView
            android:id="@+id/discovery_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:layout_editor_absoluteX="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/button"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp">
        <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_send_logo"
                android:id="@+id/imageView"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"/>

        <TextView
                android:text="@string/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textSize="24sp"
                android:textColor="#3E3D40"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                android:fontFamily="sans-serif-black"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                android:layout_marginStart="8dp"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout"
                app:layout_constraintStart_toEndOf="@+id/textView"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="4dp">

            <TextView
                    android:text="@string/firefox_test_pilot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:textStyle="bold"
                    android:textSize="8sp"
                    android:textColor="#3E3D40"/>
            <TextView
                    android:text="@string/web_experiment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:textSize="8sp"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <Button
            android:text="@string/share_qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="#FFFFFF"/>

</android.support.constraint.ConstraintLayout>